--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "web3": "4.16.0"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-verify": "^3.0.7",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@nomiclabs/hardhat-etherscan": "^3.1.8",
     "@types/react": "18.2",
     "@types/react-dom": "18.2",
     "@types/uuid": "^10.0.0",
