Update .env.example with deployed contract addresses

--- a/.env.example
+++ b/.env.example
@@ -10,16 +10,11 @@ VITE_WALLETCONNECT_PROJECT_ID=your_walletconnect_project_id_here
 # Get your API key from https://makersuite.google.com/app/apikey
 VITE_GEMINI_API_KEY=your_gemini_api_key_here
 
-# Smart Contract Addresses (after deployment)
-VITE_QUIZ_CONTRACT_ADDRESS=
-VITE_NFT_STAKING_CONTRACT_ADDRESS=
-VITE_GAME_LIFECYCLE_CONTRACT_ADDRESS=
+# Smart Contract Addresses (Deployed on Celo Sepolia Testnet)
+VITE_QUIZ_CONTRACT_ADDRESS=0x122f95938706f3A973204b37543a7430A8F9121c
+VITE_NFT_STAKING_CONTRACT_ADDRESS=0x5E1a8f5E7F480B8976129d5c79C5990daeEC6252
+VITE_GAME_LIFECYCLE_CONTRACT_ADDRESS=0x3B30c61e00E848e9cFc990687b743FD118E9C503
 
 # Network Configuration
 VITE_NETWORK=celo-sepolia
-VITE_CHAIN_ID=11142220
-
-# Deployed Contract Addresses (Celo Sepolia Testnet)
-# GameLifecycleNative: 0x3B30c61e00E848e9cFc990687b743FD118E9C503
-# OptimizedQuizGame: 0x122f95938706f3A973204b37543a7430A8F9121c
-# NFTStaking: 0x5E1a8f5E7F480B8976129d5c79C5990daeEC6252
+VITE_CHAIN_ID=44787
