Update vercel.json with deployed contract addresses and network config

--- a/vercel.json
+++ b/vercel.json
@@ -13,8 +13,10 @@
   "env": {
     "VITE_WALLETCONNECT_PROJECT_ID": "@walletconnect-project-id",
     "VITE_GEMINI_API_KEY": "@gemini-api-key",
-    "VITE_QUIZ_CONTRACT_ADDRESS": "@quiz-contract-address",
-    "VITE_NFT_STAKING_CONTRACT_ADDRESS": "@nft-staking-contract-address",
-    "VITE_GAME_LIFECYCLE_CONTRACT_ADDRESS": "@game-lifecycle-contract-address"
+    "VITE_QUIZ_CONTRACT_ADDRESS": "0x122f95938706f3A973204b37543a7430A8F9121c",
+    "VITE_NFT_STAKING_CONTRACT_ADDRESS": "0x5E1a8f5E7F480B8976129d5c79C5990daeEC6252",
+    "VITE_GAME_LIFECYCLE_CONTRACT_ADDRESS": "0x3B30c61e00E848e9cFc990687b743FD118E9C503",
+    "VITE_NETWORK": "celo-sepolia",
+    "VITE_CHAIN_ID": "44787"
   }
 }
