Update .env.example with correct Celo Sepolia chain ID

--- a/.env.example
+++ b/.env.example
@@ -17,4 +17,4 @@ VITE_GAME_LIFECYCLE_CONTRACT_ADDRESS=0x3B30c61e00E848e9cFc990687b743FD118E9C503
 
 # Network Configuration
 VITE_NETWORK=celo-sepolia
-VITE_CHAIN_ID=44787
+VITE_CHAIN_ID=11142220
