Fix chain ID in vercel.json for Celo Sepolia

--- a/vercel.json
+++ b/vercel.json
@@ -17,6 +17,6 @@
     "VITE_NFT_STAKING_CONTRACT_ADDRESS": "0x5E1a8f5E7F480B8976129d5c79C5990daeEC6252",
     "VITE_GAME_LIFECYCLE_CONTRACT_ADDRESS": "0x3B30c61e00E848e9cFc990687b743FD118E9C503",
     "VITE_NETWORK": "celo-sepolia",
-    "VITE_CHAIN_ID": "44787"
+    "VITE_CHAIN_ID": "11142220"
   }
 }
