Fixed multiple RPC errors

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,10 @@ VITE_WALLETCONNECT_PROJECT_ID=your_walletconnect_project_id_here
 # Get your API key from https://makersuite.google.com/app/apikey
 VITE_GEMINI_API_KEY=your_gemini_api_key_here
 
+# OpenRouter AI (for Quiz Generation - alternative to Gemini)
+# Get your API key from https://openrouter.ai/keys
+VITE_OPENROUTER_API_KEY=your_openrouter_api_key_here
+
 # Smart Contract Addresses (Deployed on Celo Sepolia Testnet)
 VITE_QUIZ_CONTRACT_ADDRESS=0x122f95938706f3A973204b37543a7430A8F9121c
 VITE_NFT_STAKING_CONTRACT_ADDRESS=0x5E1a8f5E7F480B8976129d5c79C5990daeEC6252
